Fixed word wrap

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -7,8 +7,8 @@
 }
 
 #main--wrapper {
-  height: 100%;
-  width: 100%;
+  height: 100dvh;
+  width: 100dvw;
   background-color: white;
   display: flex;
 }
